[package]
name = "count_tokens"
version = "0.1.0"
authors = ["Nikita Kitaev <nikitakit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qp-trie = "0.7.6"
rayon = "1.5.0"
serde_json = "1.0.64"
zstd = "0.6.1"

