[package]
name = "create_pretraining_data"
version = "0.1.0"
authors = ["Nikita Kitaev <nikitakit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
rand = "0.8.3"
rayon = "1.5.0"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
